chore: updated CHANGELOG.md